--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "homework_web_10"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.1.7"
+psycopg2 = "^2.9.5"
 
 
 [build-system]
